2007-06-14  Chong Yidong  <cyd@stupidchicken.com>

	* composite.c (update_compositions): Check validity of compositions.

2007-06-10  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Fx_file_dialog): Take size from struct not pointer.

2007-06-06  Jason Rumney  <jasonr@gnu.org>

	* s/ms-w32.h: Don't define HAVE_TZNAME.

2007-06-06  Chong Yidong  <cyd@stupidchicken.com>

	* image.c (xpm_load): Remove spurious call to
	xpm_init_color_cache.

2007-06-06  Martin Rudalics  <rudalics@gmx.at>

	* syntax.c (scan_words): Fix arg to UPDATE_SYNTAX_TABLE_BACKWARD.

2007-06-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* xfaces.c (syms_of_xfaces): Delete stray semicolon.
	* xdisp.c (next_element_from_buffer):
	* window.c (delete_window):
	* term.c (term_mouse_highlight):
	* msdos.c (getdefdir):
	* macterm.c (mac_create_bitmap_from_bitmap_data)
	(init_font_name_table):
	* fns.c (Fsxhash):
	* data.c (Fmake_local_variable):
	* ccl.c (ccl_driver): Likewise.

2007-06-04  Juanma Barranquero  <lekktu@gmail.com>

	* window.c (Fshrink_window): Reflow docstring.

2007-06-02  Chong Yidong  <cyd@stupidchicken.com>

	* Version 22.1 released.

	* xfns.c (x_set_name_internal): Undo last change.

2007-06-01  Richard Stallman  <rms@gnu.org>

	* xfns.c (x_encode_text): Add GCPRO.
	(x_set_name_internal): Separate USE_GTK and non-USE_GTK cases.

2007-06-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xfns.c (x_set_name_internal): Save encoded name before
	x_encode_text in case string data is relocated.

2007-05-31  Richard Stallman  <rms@gnu.org>

	* buffer.c (syms_of_buffer): Doc fix.

2007-05-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xdisp.c (redisplay_internal): Bind inhibit-point-motion-hooks to t
	around current_column call.

2007-05-24  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): If first window line is a
	continuation line, recompute the new window start instead of
	recentering.

2007-05-24  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
